--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-on-pages",
   "version": "0.1.0",
-  "homepage": "https://kolibril13.github.io/react-on-pages",
+  "homepage": "https://octoframes.github.io/okapi-create-react-app/",
 
   "private": true,
   "dependencies": {
